<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/posterBigImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.1"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/posterNormalImg"
                    android:layout_width="210dp"
                    android:layout_height="300dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/posterBigImg"
                    app:shapeAppearanceOverlay="@style/roundedImageView" />

                <TextView
                    android:id="@+id/movieNameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/titleTxt"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@id/posterNormalImg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/movieRateTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_star"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/defaultt"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/movieTimeTxt"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/movieTimeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/time"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/defaultt"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/movieDateTxt"
                    app:layout_constraintStart_toEndOf="@id/movieRateTxt" />

                <TextView
                    android:id="@+id/movieDateTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/calendar"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/defaultt"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/movieTimeTxt" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/bg_circle_dark"
                    android:contentDescription="@null"
                    android:padding="8dp"
                    android:src="@drawable/back"
                    app:layout_constraintDimensionRatio="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.08" />

                <ImageView
                    android:id="@+id/favorite"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="7dp"
                    android:background="@drawable/bg_circle_dark"
                    android:contentDescription="@null"
                    android:padding="8dp"
                    android:src="@drawable/favorite"
                    app:layout_constraintDimensionRatio="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.08" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/summeryText"
                android:padding="5dp"
                android:textSize="16sp"
                android:drawableStart="@drawable/info"
                android:drawableTint="@color/orange"
                android:drawablePadding="5dp"
                android:textColor="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout" />

            <TextView
                android:id="@+id/movieSummeryInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/test"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="@id/text"
                app:layout_constraintEnd_toEndOf="@id/text"
                app:layout_constraintTop_toBottomOf="@id/text"/>

            <TextView
                android:id="@+id/movieActor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/actorTxt"
                android:padding="5dp"
                android:textSize="16sp"
                android:drawableStart="@drawable/person"
                android:drawableTint="@color/orange"
                android:drawablePadding="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/orange"
                app:layout_constraintStart_toStartOf="@id/text"
                app:layout_constraintEnd_toEndOf="@id/text"
                app:layout_constraintTop_toBottomOf="@id/movieSummeryInfo"/>

            <TextView
                android:id="@+id/movieInfoActor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/test"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="@id/text"
                app:layout_constraintEnd_toEndOf="@id/text"
                app:layout_constraintTop_toBottomOf="@id/movieActor"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imageRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/movieInfoActor"
                android:layout_marginTop="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/detailLoading"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>